--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@stitches/react": "^1.2.8",
     "axios": "^1.0.0",
+    "immer": "^9.0.16",
     "keen-slider": "^6.8.2",
     "next": "12.3.1",
+    "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "stripe": "^10.12.0"
+    "stripe": "^10.12.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.7.23",
